# Kataglyphis-Cpp-Inference

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile.in  LICENSE.rtf  README.md  docker_build.ps1  gcovr.cfg  profile.prof  requirements.txt  run_build.bat  run_build.cmd  run_build.sh  run_docker_build.ps1  start_profile.ps1  test2.cpp
.github/actions/install-deps/: action.yml
.github/scripts/windows/: container-build.ps1
.github/workflows/: linux_run.yml  linux_run_arm.yml  linux_run_x86.yml  windows_run.yml
ExternalLib/: CMakeLists.txt
Src/: CMakeLists.txt  KataglyphisCppProjectConfig.hpp  KataglyphisCppProjectConfig.hpp.in  KataglyphisCppProjectConfig.ixx.in  Main.cpp  c_api.cpp  c_api.h  cli_main.cpp  config_loader.cpp  config_loader.ixx  gstreamer_pipeline.cpp  gstreamer_pipeline.ixx  inference_demo.cpp  inference_lib.cpp  inference_lib.hpp  inference_lib.ixx  kataglyphis_c_api.cpp  kataglyphis_c_api.h  kataglyphis_c_api.ixx  kataglyphis_export.h  onnx_inference_engine.cpp  onnx_inference_engine.ixx  toml_config.cpp  toml_config.ixx  webrtc_streamer.cpp  webrtc_streamer.ixx  yolo_detector.cpp  yolo_detector.ixx
Src/cmake/: SetSourceGroups.cmake
Src/cmake/filters/: SetProjectFilters.cmake
Src/rusty_code/: Cargo.toml  build.rs
Test/cmake/: CommonTestBuild.cmake
Test/commit/: CMakeLists.txt  commitSuite.cpp
Test/compile/: CMakeLists.txt  compileSuite.cpp
Test/fuzz/: CMakeLists.txt  libfuzzer_harness.cpp
Test/perf/: CMakeLists.txt  perfSuite.cpp
Test/perf/cmake/: SetTestFilters.cmake
cmake/: CPackOptions.cmake  Cache.cmake  ClangClModules.cmake  Doxygen.cmake  Hardening.cmake  ProjectOptions.cmake  Sanitizers.cmake  Speedup.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  SystemLibDependencies.cmake  Tests.cmake
cmake/fuzztest_compat/absl/base/: fast_type_id.h  nullability.h
cmake/fuzztest_compat/absl/synchronization/: mutex.h
cmake/fuzztest_compat/atn/: ProfilingATNSimulator.h
docs/: test_results.xml
docs/_build_validation/: .buildinfo  api_reference.html  development_workflow.html  genindex.html  getting_started.html  graphviz_files.html  index.html  index.rst  objects.inv  overview.html  search.html  searchindex.js  test_results.html  windows_workflow.html
docs/_build_validation/.doctrees/: api_reference.doctree  development_workflow.doctree  environment.pickle  getting_started.doctree  graphviz_files.doctree  index.doctree  overview.doctree  test_results.doctree  windows_workflow.doctree
docs/_build_validation/_sources/: api_reference.rst  getting_started.rst  index.rst  overview.rst  windows_workflow.rst
docs/_build_validation/_static/css/: custom.css
docs/coverage/: index.cli_main.cpp.21e7580810e66e4f849200a4babf8a71.html  index.functions.html  index.gstreamer_pipeline.cpp.60bbc62e4e2ad8a4914aa6a4e29b7e06.html  index.html  index.inference_demo.cpp.953ff6829ba754ece6f73b4b8b71678a.html  index.inference_lib.cpp.dfad7f35c94ec5403c4673fa1efb5107.html  index.kataglyphis_c_api.cpp.aaadf18442c99b927aab6b1342aea08e.html  index.onnx_inference_engine.cpp.e05c48e58bb8b97a4d9d830c2c9d73c2.html  index.onnx_inference_engine.ixx.0ad47147418173cd509d786070657ef1.html  index.yolo_detector.cpp.b8ded25528ff9966df5686193d2e06f6.html
docs/coverage/coverage/home/jones/GitHub/Kataglyphis-Inference-Engine/ExternalLib/Kataglyphis_NativeInferencePlugin/native/KataglyphisCppInference/Src/: inference_lib.cpp.html  kataglyphis_c_api.cpp.html
docs/coverage/coverage/home/jones/GitHub/Kataglyphis-Inference-Engine/ExternalLib/Kataglyphis_NativeInferencePlugin/native/KataglyphisCppInference/Test/compile/: compileSuite.cpp.html
docs/source/: conf.py  development_workflow.rst  getting_started.rst  graphviz_files.rst  graphviz_generator.py  index.rst  overview.rst  test_results.rst
docs/source/test-results/: test_results.md
docs/test-results/: test_results.html
docs/test-results-md/: test_results.md
logs/: results.json
packaging/msix/: AppxManifest.template.xml
resources/configs/: inference_config.toml
resources/packaging/: KataglyphisCppInference.appdata.xml  KataglyphisCppInference.desktop
scripts/linux/: ci_build_and_test.sh  ci_common.sh  ci_coverage.sh  ci_docs.sh  ci_finalize.sh  ci_init.sh  ci_profile_bench.sh  ci_release.sh  ci_run_all.sh  ci_static_analysis.sh  run_static_analysis_format.sh  setup-dependencies.sh
scripts/windows/: Build-Windows.ps1  Windows-Build.ps1  container-build.ps1  setup-dependencies.ps1  start_build.ps1  start_debug.ps1  start_help.ps1  start_profile.ps1  start_release.ps1
